kubernetes/infrastructure/configs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanidm
  namespace: kanidm
spec:
  selector:
    app: kanidm
  ports:
    - name: https
      port: 443
      targetPort: 8443
    - name: ldap
      port: 636
      targetPort: 3636
